--- a/themes/hello-friend-ng/assets/scss/_logo.scss
+++ b/themes/hello-friend-ng/assets/scss/_logo.scss
@@ -6,6 +6,10 @@
   font-display: auto;
   font-family: monospace, monospace;
 
+  :hover {
+    color: #b5121b;
+  }
+
   img {
     height: 44px;
   }
