--- a/themes/hello-friend-ng/assets/scss/_menu.scss
+++ b/themes/hello-friend-ng/assets/scss/_menu.scss
@@ -74,6 +74,7 @@
 
     &:hover {
       text-decoration: underline;
+      color: #b5121b;
     }
 
     &:last-of-type {
@@ -126,11 +127,11 @@
     @media (prefers-color-scheme: light) {
       background: $light-background-header;
     }
-    
+
     [data-theme=dark] & {
       background: $dark-background-header;
     }
-  
+
     [data-theme=light] & {
       background: $light-background-header;
     }
@@ -145,7 +146,7 @@
 
   .dropdown-content a:hover {
     background: $dark-background-header;
-    
+
     @media (prefers-color-scheme: light) {
       background: $light-background-header;
     }
@@ -153,7 +154,7 @@
     [data-theme=dark] & {
       background: $dark-background-header;
     }
-  
+
     [data-theme=light] & {
       background: $light-background-header;
     }
