--- a/themes/hello-friend-ng/assets/scss/_single.scss
+++ b/themes/hello-friend-ng/assets/scss/_single.scss
@@ -70,6 +70,7 @@
 
     a:hover {
       border-bottom: 1px solid white;
+      color: #b5121b;
     }
 
     svg {
@@ -135,17 +136,17 @@
         background: $dark-background;
         color: $dark-color-secondary;
       }
-    
+
       @media (prefers-color-scheme: light) {
         background: $light-background;
         color: $light-color-secondary;
       }
-    
+
       [data-theme=dark] & {
         background: $dark-background;
         color: $dark-color-secondary;
       }
-    
+
       [data-theme=light] & {
         background: $light-background;
         color: $light-color-secondary;
