--- a/themes/hello-friend-ng/layouts/partials/graphic.html
+++ b/themes/hello-friend-ng/layouts/partials/graphic.html
@@ -1,3 +1,3 @@
-<div class="header-banner" style="width: 100%;height: auto;">
+<div class="header-banner" style="width: 75%;height: 40%;">
     <object id="line-anim" class="line-anim" type="image/svg+xml" data="header_img/header.svg"></object>
 </div>
