Add conduct form

--- a/themes/hello-friend-ng/assets/scss/_variables.scss
+++ b/themes/hello-friend-ng/assets/scss/_variables.scss
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+/* Global colors */
+$dark-red:#B5121B;
+
 /* Light theme color */
 $light-background: #fff;
 $light-background-secondary: #eaeaea;
