--- a/themes/hello-friend-ng/assets/scss/_footer.scss
+++ b/themes/hello-friend-ng/assets/scss/_footer.scss
@@ -2,6 +2,7 @@
   padding: 40px 20px;
   flex-grow: 0;
   color: $light-color-secondary;
+  background-color: $light-background-header;
 
   &__inner {
     display: flex;
@@ -20,7 +21,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 1rem;
+    font-size: 0.75rem;
     color: $light-color-secondary;
 
     @media #{$media-size-tablet} {
