--- a/themes/hello-friend-ng/layouts/partials/menu.html
+++ b/themes/hello-friend-ng/layouts/partials/menu.html
@@ -5,7 +5,7 @@
             <li><a href="{{ .URL | relLangURL }}">{{ .Name }}</a></li>
         {{- end }}
 
-        {{- if .Site.Params.EnableGlobalLanguageMenu }}
+        <!-- {{- if .Site.Params.EnableGlobalLanguageMenu }}
         <div class="submenu">
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">{{ .Language }}</a>
@@ -18,6 +18,6 @@
                 </div>
             </li>
         </div>
-        {{- end }}
+        {{- end }} -->
     </ul>
 </nav>
