--- a/layouts/shortcodes/hoverfig.html
+++ b/layouts/shortcodes/hoverfig.html
@@ -1,6 +1,13 @@
+<!-- <div class="galleryContainer">
+    <img src="{{ .Get "src" }}" alt="" class="{{ .Get "class" }}">
+    <div class="middleGallery">
+      <div class="text">{{ .Get "hoverText" }}</div>
+    </div>
+  </div> -->
+
 <div class="galleryContainer">
     <img src="{{ .Get "src" }}" alt="" class="{{ .Get "class" }}">
     <div class="middleGallery">
       <div class="text">{{ .Get "hoverText" }}</div>
     </div>
-  </div>
+</div>
